Rediseñar la interfaz e importar listas en Beta 0.2